@@ -71,6 +71,7 @@ Release 0.19.0 - Unreleased
                for root region"
    HBASE-990   NoSuchElementException in flushSomeRegions
    HBASE-602   HBase Crash when network card has a IPv6 address
+   HBASE-996   Migration script to up the versions in catalog tables
       
   IMPROVEMENTS
    HBASE-901   Add a limit to key length, check key and value length on client side
